part3-deployment/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: welcome-nax-service
                port: 
                  number: 3000
          - path: /hello
            pathType: Prefix
            backend:
              service:
                name: hello-world-service
                port: 
                  number: 80
